// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a new item to a new day when the loaded range is open ended in the future 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
    [
      "2018-01-02",
      [
        {
          "date": "2018-01-02T00:00:00.000Z",
          "dateBucketMoment": "2018-01-02T00:00:00.000Z",
          "id": "new future",
          "title": "new future",
          "uniqueId": "new future",
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": true,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`adds a new item to a new day when the loaded range is open ended in the past 1`] = `
{
  "days": [
    [
      "2017-12-31",
      [
        {
          "date": "2017-12-31T00:00:00.000Z",
          "dateBucketMoment": "2017-12-31T00:00:00.000Z",
          "id": "new past",
          "title": "new past",
          "uniqueId": "new past",
        },
      ],
    ],
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": true,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`adds a new item to a new day when the new date is within the loaded range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
    [
      "2018-01-02",
      [
        {
          "date": "2018-01-02T00:00:00.000Z",
          "dateBucketMoment": "2018-01-02T00:00:00.000Z",
          "id": 1,
          "title": "1",
          "uniqueId": 1,
        },
      ],
    ],
    [
      "2018-01-03",
      [
        {
          "date": "2018-01-03T00:00:00.000Z",
          "dateBucketMoment": "2018-01-03T00:00:00.000Z",
          "id": 2,
          "title": "2",
          "uniqueId": 2,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`adds a new item to an existing day when the new date is within the loaded range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 1,
          "title": "1",
          "uniqueId": 1,
        },
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 2,
          "title": "2",
          "uniqueId": 2,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`adds a new item to partial future days when the new date is before the near future boundary but outside loaded range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [
      [
        "2018-01-03",
        [
          {
            "date": "2018-01-03T00:00:00.000Z",
            "dateBucketMoment": "2018-01-03T00:00:00.000Z",
            "id": "new future partial",
            "title": "new future partial",
            "uniqueId": "new future partial",
          },
        ],
      ],
      [
        "2018-01-04",
        [
          {
            "date": "2018-01-04T00:00:00.000Z",
            "dateBucketMoment": "2018-01-04T00:00:00.000Z",
            "id": "existing future partial +3",
            "title": "existing future partial +3",
            "uniqueId": "existing future partial +3",
          },
        ],
      ],
    ],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`adds a new item to partial future days when the new date is within the partial future date range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [
      [
        "2018-01-02",
        [
          {
            "date": "2018-01-02T00:00:00.000Z",
            "dateBucketMoment": "2018-01-02T00:00:00.000Z",
            "id": "existing future partial +1",
            "title": "existing future partial +1",
            "uniqueId": "existing future partial +1",
          },
        ],
      ],
      [
        "2018-01-03",
        [
          {
            "date": "2018-01-03T00:00:00.000Z",
            "dateBucketMoment": "2018-01-03T00:00:00.000Z",
            "id": "new future partial",
            "title": "new future partial",
            "uniqueId": "new future partial",
          },
        ],
      ],
      [
        "2018-01-04",
        [
          {
            "date": "2018-01-04T00:00:00.000Z",
            "dateBucketMoment": "2018-01-04T00:00:00.000Z",
            "id": "existing future partial +3",
            "title": "existing future partial +3",
            "uniqueId": "existing future partial +3",
          },
        ],
      ],
    ],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`adds a new item to partial future days when the new date matches the near future boundary 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [
      [
        "2018-01-02",
        [
          {
            "date": "2018-01-02T00:00:00.000Z",
            "dateBucketMoment": "2018-01-02T00:00:00.000Z",
            "id": "existing future partial",
            "title": "existing future partial",
            "uniqueId": "existing future partial",
          },
          {
            "date": "2018-01-02T00:00:00.000Z",
            "dateBucketMoment": "2018-01-02T00:00:00.000Z",
            "id": "new future partial",
            "title": "new future partial",
            "uniqueId": "new future partial",
          },
        ],
      ],
    ],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`adds a new item to partial past days when the new date is after the near past boundary but outside loaded range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [
      [
        "2017-12-29",
        [
          {
            "date": "2017-12-29T00:00:00.000Z",
            "dateBucketMoment": "2017-12-29T00:00:00.000Z",
            "id": "existing past partial -3",
            "title": "existing past partial -3",
            "uniqueId": "existing past partial -3",
          },
        ],
      ],
      [
        "2017-12-30",
        [
          {
            "date": "2017-12-30T00:00:00.000Z",
            "dateBucketMoment": "2017-12-30T00:00:00.000Z",
            "id": "new past partial",
            "title": "new past partial",
            "uniqueId": "new past partial",
          },
        ],
      ],
    ],
    "plannerLoaded": true,
  },
}
`;

exports[`adds a new item to partial past days when the new date is within the partial past date range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [
      [
        "2017-12-29",
        [
          {
            "date": "2017-12-29T00:00:00.000Z",
            "dateBucketMoment": "2017-12-29T00:00:00.000Z",
            "id": "existing past partial -3",
            "title": "existing past partial -3",
            "uniqueId": "existing past partial -3",
          },
        ],
      ],
      [
        "2017-12-30",
        [
          {
            "date": "2017-12-30T00:00:00.000Z",
            "dateBucketMoment": "2017-12-30T00:00:00.000Z",
            "id": "new past partial",
            "title": "new past partial",
            "uniqueId": "new past partial",
          },
        ],
      ],
      [
        "2017-12-31",
        [
          {
            "date": "2017-12-31T00:00:00.000Z",
            "dateBucketMoment": "2017-12-31T00:00:00.000Z",
            "id": "existing past partial -1",
            "title": "existing past partial -1",
            "uniqueId": "existing past partial -1",
          },
        ],
      ],
    ],
    "plannerLoaded": true,
  },
}
`;

exports[`adds a new item to partial past days when the new date matches the near past boundary 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [
      [
        "2017-12-31",
        [
          {
            "date": "2017-12-31T00:00:00.000Z",
            "dateBucketMoment": "2017-12-31T00:00:00.000Z",
            "id": "existing past partial",
            "title": "existing past partial",
            "uniqueId": "existing past partial",
          },
          {
            "date": "2017-12-31T00:00:00.000Z",
            "dateBucketMoment": "2017-12-31T00:00:00.000Z",
            "id": "new past partial",
            "title": "new past partial",
            "uniqueId": "new past partial",
          },
        ],
      ],
    ],
    "plannerLoaded": true,
  },
}
`;

exports[`changes the date to a new day when the date has changed within the loaded range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
    [
      "2018-01-02",
      [
        {
          "date": "2018-01-02T00:00:00.000Z",
          "dateBucketMoment": "2018-01-02T00:00:00.000Z",
          "id": "to move",
          "title": "to move",
          "uniqueId": "to move",
        },
      ],
    ],
    [
      "2018-01-03",
      [
        {
          "date": "2018-01-03T00:00:00.000Z",
          "dateBucketMoment": "2018-01-03T00:00:00.000Z",
          "id": 2,
          "title": "2",
          "uniqueId": 2,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`changes the date to an existing day when the date has changed within the loaded range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
    [
      "2018-01-02",
      [
        {
          "date": "2018-01-02T00:00:00.000Z",
          "dateBucketMoment": "2018-01-02T00:00:00.000Z",
          "id": 1,
          "title": "1",
          "uniqueId": 1,
        },
        {
          "date": "2018-01-02T00:00:00.000Z",
          "dateBucketMoment": "2018-01-02T00:00:00.000Z",
          "id": 2,
          "title": "2",
          "uniqueId": 2,
        },
        {
          "date": "2018-01-02T00:00:00.000Z",
          "dateBucketMoment": "2018-01-02T00:00:00.000Z",
          "id": "to move",
          "title": "to move",
          "uniqueId": "to move",
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`does not insert a past item into days if the state is empty and past is not loaded 1`] = `
{
  "days": [],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`does nothing if action.error 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`does nothing if the action is not SAVED_PLANNER_ITEM 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`does nothing if the planner is not loaded 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": false,
  },
}
`;

exports[`does nothing when date falls in distant future and there is no near future range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`does nothing when date falls in distant past and there is no near past range 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`does nothing when the date falls in the distant future 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [
      [
        "2018-01-02",
        [
          {
            "date": "2018-01-02T00:00:00.000Z",
            "dateBucketMoment": "2018-01-02T00:00:00.000Z",
            "id": "existing future partial",
            "title": "existing future partial",
            "uniqueId": "existing future partial",
          },
        ],
      ],
    ],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`does nothing when the date falls in the distant past 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [
      [
        "2017-12-31",
        [
          {
            "date": "2017-12-31T00:00:00.000Z",
            "dateBucketMoment": "2017-12-31T00:00:00.000Z",
            "id": "existing past partial",
            "title": "existing past partial",
            "uniqueId": "existing past partial",
          },
        ],
      ],
    ],
    "plannerLoaded": true,
  },
}
`;

exports[`inserts a future item into days if the state is empty and allFutureItemsLoaded 1`] = `
{
  "days": [
    [
      "2018-01-02",
      [
        {
          "date": "2018-01-02T00:00:00.000Z",
          "dateBucketMoment": "2018-01-02T00:00:00.000Z",
          "id": "new item",
          "title": "new item",
          "uniqueId": "new item",
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": true,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`inserts a past item into days if state is empty and allPastItemsLoaded 1`] = `
{
  "days": [
    [
      "2017-12-31",
      [
        {
          "date": "2017-12-31T00:00:00.000Z",
          "dateBucketMoment": "2017-12-31T00:00:00.000Z",
          "id": "new item",
          "title": "new item",
          "uniqueId": "new item",
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": true,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`inserts a today item into days if the state is empty 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": "new item",
          "title": "new item",
          "uniqueId": "new item",
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`inserts an item into last loaded day even when it is after startOf("day") 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
    [
      "2018-01-02",
      [
        {
          "date": "2018-01-02T00:00:00.000Z",
          "dateBucketMoment": "2018-01-02T00:00:00.000Z",
          "id": 1,
          "title": "1",
          "uniqueId": 1,
        },
        {
          "date": "2018-01-02T00:00:00.000Z",
          "dateBucketMoment": "2018-01-02T13:00:00.000Z",
          "id": "afternoon item",
          "title": "afternoon item",
          "uniqueId": "afternoon item",
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`removes item from days and adds it to partial future days when the date has changed to a near future date 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [
      [
        "2018-01-03",
        [
          {
            "date": "2018-01-03T00:00:00.000Z",
            "dateBucketMoment": "2018-01-03T00:00:00.000Z",
            "id": 2,
            "title": "2",
            "uniqueId": 2,
          },
          {
            "date": "2018-01-03T00:00:00.000Z",
            "dateBucketMoment": "2018-01-03T00:00:00.000Z",
            "id": "should be in partial future",
            "title": "should be in partial future",
            "uniqueId": "should be in partial future",
          },
        ],
      ],
    ],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`removes item from days and adds it to partial past days when the date has changed to a near past date 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [
      [
        "2017-12-30",
        [
          {
            "date": "2017-12-30T00:00:00.000Z",
            "dateBucketMoment": "2017-12-30T00:00:00.000Z",
            "id": -2,
            "title": "-2",
            "uniqueId": -2,
          },
          {
            "date": "2017-12-30T00:00:00.000Z",
            "dateBucketMoment": "2017-12-30T00:00:00.000Z",
            "id": "should be in partial past",
            "title": "should be in partial past",
            "uniqueId": "should be in partial past",
          },
        ],
      ],
    ],
    "plannerLoaded": true,
  },
}
`;

exports[`removes item from days when the date has changed to a distant future date 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [
      [
        "2018-01-03",
        [
          {
            "date": "2018-01-03T00:00:00.000Z",
            "dateBucketMoment": "2018-01-03T00:00:00.000Z",
            "id": 2,
            "title": "2",
            "uniqueId": 2,
          },
        ],
      ],
    ],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`removes item from days when the date has changed to a distant past date 1`] = `
{
  "days": [
    [
      "2017-12-31",
      [
        {
          "date": "2017-12-31T00:00:00.000Z",
          "dateBucketMoment": "2017-12-31T00:00:00.000Z",
          "id": -1,
          "title": "-1",
          "uniqueId": -1,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [
      [
        "2017-12-30",
        [
          {
            "date": "2017-12-30T00:00:00.000Z",
            "dateBucketMoment": "2017-12-30T00:00:00.000Z",
            "id": -2,
            "title": "-2",
            "uniqueId": -2,
          },
        ],
      ],
    ],
    "plannerLoaded": true,
  },
}
`;

exports[`resorts the order of items when the item date has not changed 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "aaa",
          "uniqueId": 0,
        },
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 2,
          "title": "ccc",
          "uniqueId": 2,
        },
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 1,
          "title": "eee",
          "uniqueId": 1,
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;

exports[`updates the item when its date does not change 1`] = `
{
  "days": [
    [
      "2018-01-01",
      [
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": 0,
          "title": "0",
          "uniqueId": 0,
        },
        {
          "date": "2018-01-01T00:00:00.000Z",
          "dateBucketMoment": "2018-01-01T00:00:00.000Z",
          "id": "to update",
          "title": "updated title",
          "uniqueId": "to update",
        },
      ],
    ],
  ],
  "loading": {
    "allFutureItemsLoaded": false,
    "allPastItemsLoaded": false,
    "partialFutureDays": [],
    "partialPastDays": [],
    "plannerLoaded": true,
  },
}
`;
